--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg site generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header1-1" data-bg-video="https://www.youtube.com/embed/Kza6bkroDr8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">top web site building software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header1-1" data-bg-video="https://www.youtube.com/embed/Kza6bkroDr8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     
 
@@ -268,7 +268,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-3" style="background-image: url(assets/images/desert1.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-3" style="background-image: url(assets/images/desert2.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
