--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <div class="navbar-brand">
                         <span class="navbar-logo"><img src="assets/images/logo231-128x128-10.png" alt="Mobirise"></span>
-                        <a class="navbar-caption text-warning" href="https://mobirise.com">MyBIRISEsite</a>
+                        <a class="navbar-caption text-warning" href="https://mobirise.com">UNIARTSFER</a>
                     </div>
 
                 </div>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web site building software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header1-1" data-bg-video="https://www.youtube.com/embed/Kza6bkroDr8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile site maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header1-1" data-bg-video="https://www.youtube.com/embed/Kza6bkroDr8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     
 
@@ -71,7 +71,7 @@
 
                     <h1 class="mbr-section-title display-1">FULL SCREEN INTRO</h1>
                     <p class="mbr-section-lead lead">Click any text to edit or style it. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. <br> Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add extensions.</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="https://mobirise.com">ПРАЗДНИКИ</a> <a class="btn btn-lg btn-black-outline btn-black" href="https://mobirise.com">ШОУ</a> </div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="https://mobirise.com">ПРАЗДНИКИ</a> <a class="btn btn-lg btn-danger" href="https://mobirise.com">ПРАЗДНИКИ</a>   </div>
                 </div>
             </div>
         </div>
@@ -268,7 +268,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-parallax-background" id="msg-box8-3" style="background-image: url(assets/images/desert2.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section article mbr-parallax-background" id="msg-box8-3" style="background-image: url(assets/images/desert3.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
